--- a/src/index.css
+++ b/src/index.css
@@ -33,9 +33,8 @@ h1 {
 }
 
 h2 {
-  font-size: 3em;
+  font-size: 2.6em;
   margin: 0.5em 0 0.5em 0;
-
 }
 h3 {
   font-size: 2.2em;
